# prosthesis_leg

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
config/: default.yaml
logs/: calibration_limits.json
scripts/: 00_wizard.py  01_calibrate_limits.py  02_smoke_impedance_hold.py  04_gesture_sweep.py  05_gesture_sine.py  06_gesture_gait.py
src/prosthesis_leg/: __main__.py  mab_interface.py
